--- a/ansible.html
+++ b/ansible.html
@@ -17,7 +17,7 @@
 <hr class="contline">
 <div class="contlead">
 <p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Ansible. Установка и настройка на Debian 11 Bullseye.<br>
-<span class="contdate">Дата:&nbsp;&nbsp;</span>Июнь 2023.<br>
+<span class="contdate">Дата:&nbsp;&nbsp;</span>Июнь 2023.&nbsp;&nbsp;<span class="contdate">Обновление:&nbsp;&nbsp;</span>Октябрь 2024.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p></div><br>
 <div class="conttext">
 <p><span class="textmark">Ansible</span> &ndash; система управления конфигурациями, написанная на языке программирования Python, с использованием декларативного языка разметки для описания конфигураций. Применяется для автоматизации настройки и развёртывания программного обеспечения. Обычно используется для управления Linux-узлами. Поддерживает работу с сетевыми устройствами, на которых установлен Python версии 2.4 и выше по SSH-соединению.</p>
