--- a/ansible.html
+++ b/ansible.html
@@ -29,7 +29,7 @@ $ <span class="textcopy">sudo nano /etc/ssh/sshd_config</span>
 <div class="messfile"><p>
 <span class="textcopy">PermitRootLogin yes</span>
 </p></div>
-<p>После чего перезапускаем сервис:</p>
+<p>Перезапускаем сервис:</p>
 <div class="messtext"><p>
 $ <span class="textcopy">sudo service ssh restart</span>
 </p></div><br>
