--- a/rpidebian.html
+++ b/rpidebian.html
@@ -17,7 +17,7 @@
 <hr class="contline">
 <div class="contlead">
 <p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Настройка Debian на Raspberry Pi 2.<br>
-<span class="contdate">Дата:&nbsp;&nbsp;</span>Октябрь 2017.&nbsp;&nbsp;<span class="contdate">Обновление:&nbsp;&nbsp;</span>Август 2022.<br>
+<span class="contdate">Дата:&nbsp;&nbsp;</span>Октябрь 2017.&nbsp;&nbsp;<span class="contdate">Обновление:&nbsp;&nbsp;</span>Декабрь 2024.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p>
 </div><br>
 <div class="conttext"><p class="contsubs">Запись образа и базовая настройка</p>
