--- a/template.html
+++ b/template.html
@@ -47,6 +47,8 @@ $ <span class="textcopy"></span>
 <p class="contsubs"></p>
 - Раздел после блока (с якорем):
 <a name=""></a><p class="contsubs"></p>
+- Имя серера:
+srv_addr
 -->
 </div>
 
