--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@ $ <span class="textcopy"></span>
 <a name=""></a><p style="font-size: 1px">&nbsp;</p>
 <p class="contsubs"></p>
 - Раздел после блока (с якорем):
-<a name=""></a><p class="contsubs"></p>
+<br><a name=""></a><p class="contsubs"></p>
 - Имя серера:
 srv_addr
 -->
