--- a/nextcloud.html
+++ b/nextcloud.html
@@ -82,11 +82,10 @@
 <div class="messtext"><p>
 # <span class="textcopy">systemctl enable --now mariadb</span>
 </p></div>
-<p>Далее проведём базовую настройку. Запустим скрипт:</p>
+<p class="textwarn">Далее запустим скрипт настройки сервера MariaDB. Во время его работы необходимо будет ответить на несколько вопросов:</p>
 <div class="messtext"><p>
 # <span class="textcopy">mysql_secure_installation</span>
 </p></div>
-<p>!!!</p>
 <p></p>
 <p></p>
 <p></p>
