--- a/nextcloud.html
+++ b/nextcloud.html
@@ -16,8 +16,8 @@
 <p class="conthead">Установка Nextcloud на Debian 12</p>
 <hr class="contline">
 <div class="contlead">
-<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Установка и базовая настройка сервера Nextcloud на Debian 12 Bookworm.<br>
-<span class="contdate">Дата:&nbsp;&nbsp;</span>.&nbsp;&nbsp;<span class="contdate">Обновление:&nbsp;&nbsp;</span>.<br>
+<p><span class="contdate">Аннотация:&nbsp;&nbsp;</span>Установка сервера Nextcloud на Debian 12 Bookworm.<br>
+<span class="contdate">Дата:&nbsp;&nbsp;</span>Май 2025.<br>
 <span class="contdate">Статус статьи:&nbsp;&nbsp;</span>pg_stat.</p></div><br>
 <div class="conttext">
 <p><span class="textmark">Nextcloud</span> &ndash; набор клиент-серверных программ для создания и использования хранилища данных. Открытая архитектура позволяет добавлять функциональность на сервер в виде приложений и позволяет пользователям полностью контролировать свои данные. Файлы Nextcloud хранятся на сервере и могут быть доступны через WebDAV, если это необходимо. Пользовательские файлы зашифровываются во время транзита (необходимо включить шифрование). Nextcloud поддерживает клиентские программы на Windows, MacOS X и GNU/Linux для синхронизации между сервером и клиентом, мобильные приложения Android и iOS для доступа к файлам.</p>
@@ -25,7 +25,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;подготовка ОС, установка и настройка&nbsp;&nbsp;<span class="textmark">Apache;</span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;установка и настройка&nbsp;&nbsp;<span class="textmark">MariaDB;</span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;установка и настройка&nbsp;&nbsp;<span class="textmark">PHP;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;установка и конфигурирование&nbsp;&nbsp;<span class="textmark">Nextcloud.</span></p>
+&nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;установка&nbsp;&nbsp;<span class="textmark">Nextcloud.</span></p>
 <p style="font-size: 1px">&nbsp;</p>
 <p class="contsubs">Подготовка ОС, установка и настройка Apache</p>
 <p>Сохранность файлов на сервере Nextcloud, безусловно, является очень важным аспектом, поэтому стоит тщательно продумать стратегию организации хранилища данных пользователя. В качестве этого самого хранилища можно использовать <span class="textmark">RAID</span>-массив или, например, <span class="textmark">NFS</span>-ресурс. Самое главное, чтобы каталог для хранения был всегда доступен (и прописан в&nbsp;&nbsp;<span class="textmark">fstab</span>).</p>
@@ -82,43 +82,82 @@
 <div class="messtext"><p>
 # <span class="textcopy">systemctl enable --now mariadb</span>
 </p></div>
-<p class="textwarn">Далее запустим скрипт настройки сервера MariaDB. Во время его работы необходимо будет ответить на несколько вопросов:</p>
+<p class="textwarn">Далее запустим скрипт настройки сервера MariaDB. Во время его работы необходимо будет ответить на несколько вопросов (предварительно введя пароль суперпользователя):</p>
 <div class="messtext"><p>
 # <span class="textcopy">mysql_secure_installation</span>
 </p></div>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-
-
-<!--
-- Основной текст:
-<p></p>
-- Выделение текста:
-<span class="textmark"></span>
-- Блок ввода с возможностью копирования:
+<p>Отвечаем на вопросы:</p>
+<div class="messview"><p>Switch to unix_socket authentication [Y/n] <b>n</b><br>
+Change the root password? [Y/n] <b>n</b><br>
+Remove anonymous users? [Y/n] <b>y</b><br>
+Disallow root login remotely? [Y/n] <b>y</b><br>
+Remove test database and access to it? [Y/n] <b>y</b><br>
+Reload privilege tables now? [Y/n] <b>y</b><br>
+</p></div>
+<p>Теперь создадим пользователя БД и саму базу данных. Заходим под суперпользователем:</p>
 <div class="messtext"><p>
-$ <span class="textcopy"></span>
+# <span class="textcopy">mysql -u root -p</span>
 </p></div>
-- Текст предупреждения:
-<p class="textwarn"></p>
-- Блок файла:
+<p>Использовать будем следующие параметры: имя базы данных &ndash; <span class="textmark">clouddb</span>, имя пользователя &ndash; <span class="textmark">ncuser</span>, пароль &ndash; <span class="textmark">1111</span> (только для примера!).</p>
+<div class="messtext"><p>
+MariaDB [(none)]> <span class="textcopy">CREATE USER 'ncuser'@'localhost' IDENTIFIED BY '1111';</span><br>
+MariaDB [(none)]> <span class="textcopy">CREATE DATABASE  DEFAULT CHARACTER SET utf8\<br> DEFAULT COLLATE utf8_general_ci;</span><br>
+MariaDB [(none)]> <span class="textcopy">GRANT ALL PRIVILEGES ON clouddb.* TO ncuser@localhost;</span><br>
+MariaDB [(none)]> <span class="textcopy">FLUSH PRIVILEGES;</span><br>
+MariaDB [(none)]> <span class="textcopy">EXIT;</span>
+</p></div>
+<br><a name="phpfpm"></a><p class="contsubs">Установка и настройка PHP</p>
+<p>Далее установим PHP:</p>
+<div class="messtext"><p>
+# <span class="textcopy">apt install php php-fpm php-common php-zip php-xml php-intl php-gd php-mysql\<br> php-mbstring php-curl php-imagick libapache2-mod-fcgid php-gmp php-bcmath\<br> libmagickcore-6.q16-6-extra</span>
+</p></div>
+<p>Включаем модули Apache и конфигурацию php-fpm:</p>
+<div class="messtext"><p>
+# <span class="textcopy">a2enmod proxy_fcgi setenvif</span><br>
+# <span class="textcopy">a2enconf php8.2-fpm</span>
+</p></div>
+<p>Откроем файл конфигурации:</p>
+<div class="messtext"><p>
+# <span class="textcopy">nano /etc/php/8.2/fpm/php.ini</span>
+</p></div>
+<p>Находим соответствующие строки и приводим к следующим значениям:</p>
 <div class="messfile"><p>
-<span class="textcopy"></span>
+<span class="textcopy">memory_limit = <b>512M</b><br>
+opcache.enable_cli=<b>1</b><br>
+opcache.interned_strings_buffer=<b>32</b><br>
+opcache.revalidate_freq=<b>1</b></span>
 </p></div>
-- Блок вывода:
-<div class="messview"><p>
+<p>Перезапускаем сервисы:</p>
+<div class="messtext"><p>
+# <span class="textcopy">systemctl restart apache2 php8.2-fpm</span>
 </p></div>
-- Ссылка:
-<a class="textlink" target="_blank" href=""></a>
-- Раздел после текста (с якорем):
-<a name=""></a><p style="font-size: 1px">&nbsp;</p>
-<p class="contsubs"></p>
-- Раздел после блока (с якорем):
-<br><a name=""></a><p class="contsubs"></p>
--->
+<br><p class="contsubs">Установка Nextcloud</p>
+<p>Скачиваем актуальный релиз:</p>
+<div class="messtext"><p>
+# <span class="textcopy">wget https://download.nextcloud.com/server/releases/latest.zip</span>
+</p></div>
+<p>Распаковываем архив:</p>
+<div class="messtext"><p>
+# <span class="textcopy">unzip latest.zip</span>
+</p></div>
+<p>Перемещаем в рабочий каталог сайта:</p>
+<div class="messtext"><p>
+# <span class="textcopy">mv nextcloud/ /var/www/</span>
+</p></div>
+<p>Даём права:</p>
+<div class="messtext"><p>
+# <span class="textcopy">chown -R www-data:www-data /var/www/nextcloud</span>
+</p></div>
+<p>Теперь можно зайти на веб-интерфейс по ссылке:&nbsp;&nbsp;<span class="textmark">http://<b>ip-address</b>/nextcloud/</span></p>
+<p>Здесь нужно будет создать аккаунт пользователя Nextcloud (первые два поля &ndash; логин и пароль, под которыми будет выпольняться вход на веб-интерфейс сервера), а также необходимо будет ввести следующие данные:</p>
+<p><table style="width: 400px; text-indent: 20px;">
+<tr><td>Каталог с данными:</td><td><span class="textmark">/cloud</span></td></tr>
+<tr><td>Учётная запись базы данных:</td><td><span class="textmark">ncuser</span></td></tr>
+<tr><td>Пароль базы данных:</td><td><span class="textmark">1111</span></td></tr>
+<tr><td>Имя базы данных:</td><td><span class="textmark">clouddb</span></td></tr>
+<tr><td>Хост базы данных:</td><td><span class="textmark">localhost</span></td></tr>
+</table></p>
+<p>После заполнения всех полей жмём кнопку <span class="textmark">"Установить"</span> и, через некоторое время, сервер готов к работе...</p>
 </div>
 
 <!-- END OF CONTENT -->
