--- a/nextcloud.html
+++ b/nextcloud.html
@@ -106,7 +106,7 @@ MariaDB [(none)]> <span class="textcopy">GRANT ALL PRIVILEGES ON clouddb.* TO nc
 MariaDB [(none)]> <span class="textcopy">FLUSH PRIVILEGES;</span><br>
 MariaDB [(none)]> <span class="textcopy">EXIT;</span>
 </p></div>
-<br><a name="phpfpm"></a><p class="contsubs">Установка и настройка PHP</p>
+<br><a name="php-fpm"></a><p class="contsubs">Установка и настройка PHP</p>
 <p>Далее установим PHP:</p>
 <div class="messtext"><p>
 # <span class="textcopy">apt install php php-fpm php-common php-zip php-xml php-intl php-gd php-mysql\<br> php-mbstring php-curl php-imagick libapache2-mod-fcgid php-gmp php-bcmath\<br> libmagickcore-6.q16-6-extra</span>
